# metaDMG-paper-single-genomic-simulations

./: .gitignore  analysis.py  config-mini.yaml  config.yaml  extract_damaged_reads.sh  merge_results.py  ngsngs  plotstyle.mplstyle  pyproject.toml  run.sh  run_pydamage.sh  sim-homo-0.31-100-60-69.nc  split_data.sh  utils.py
.cache/: cache.db
genome/: Mycobacterium_leprae.fa.gz.rev.2.bt2
